[package]
name = "sync-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.14.1"
pnet = "0.29.0"
uuid = {version = "1.1.0", features = ["v4"]}
sha2 = "0.10.2"
hex = "0.4.3"
tsfile-rust = { path = "../" }
crc32fast = "1.3.2"
