[package]
name = "tsfile-writer-c"
authors = ["jfeinauer@hey.com"]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "A C Lib wrapper around TsFile writer in rust"
readme = "README.md"
repository = "https://github.com/JulianFeinauer/tsfile-rust/tree/main/tsfile-writer"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
libc = "0.2.126"
tsfile-writer = {path = "../tsfile-writer"}
