[package]
name = "tsfile-writer"
authors = ["jfeinauer@hey.com"]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "A simple TsFile writer in rust with a sync sender to import tsfiles to Apache IoTDB instances"
readme = "README.md"
repository = "https://github.com/JulianFeinauer/tsfile-rust/tree/main/tsfile-writer"

[features]
sync_sender = ["thrift", "pnet", "uuid", "sha2", "hex", "crc32fast"]

[dependencies]
log = "0.4.17"
snap = "1.0.5"
# Feature sync
thrift = { version = "0.14.1" , optional = true}
pnet = { version = "0.29.0" , optional = true}
uuid = {version = "1.1.0", features = ["v4"], optional = true}
sha2 = { version = "0.10.2", optional = true}
hex = { version = "0.4.3", optional = true}
crc32fast = { version = "1.3.2", optional = true}
